forge install: index-protocol
v1.13.0

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "lib/uniswapx"]
 	path = lib/uniswapx
 	url = https://github.com/uniswap/uniswapx
+[submodule "lib/index-protocol"]
+	path = lib/index-protocol
+	url = https://github.com/indexcoop/index-protocol
